--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,30 @@
 {
+  "name": "server",
+  "main": "index.js",
+  "type": "module",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@supabase/supabase-js": "^2.93.3",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
-    "pg": "^8.17.2"
+    "pg": "^8.17.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.10",
+    "@types/pg": "^8.16.0",
+    "@types/uuid": "^10.0.0",
     "prisma": "^7.3.0",
     "typescript": "^5.9.3"
+  },
+  "scripts": {
+    "dev": "npx tsx watch src/index.ts",
+    "start": "npx tsx src/index.ts"
   }
 }
